--- a/lab-alex/index.html
+++ b/lab-alex/index.html
@@ -10,7 +10,17 @@
     <h2>OAUTH LAB</h2>
 
     <script>
-    
+      let a = document.createElement('a');
+      let AUTH_URL = 'https://accounts.google.com/o/oauth2/v2/auth';
+      let clientIDQuery = 'client_id=114940328381-ngnu1rgpqec6m2rvn75nvt0tke5gt124.apps.googleusercontent.com'
+      let responseTypeQuery = 'response_type=code';
+      let scopeQuery = 'scope=openid%20profile%20email';
+      let promptQuery = 'prompt=consent';
+      let redirectURIQuery = 'redirect_uri=http://localhost:3000/oauth/google/code';
+      let formattedURL = `${AUTH_URL}?${clientIDQuery}&${responseTypeQuery}&${scopeQuery}&${promptQuery}&${redirectURIQuery}`;
+      a.setAttribute('href', formattedURL);
+      a.textContent = 'login with google';
+      document.body.append(a);
     
     </script>
   </body>
